# js-beautify

./: .codeclimate.yml  .gitattributes  .gitignore  .gitmodules  .jshintignore  .jshintrc  .npmignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HTML-Beautify.js  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  appveyor.yml  azure-pipelines.yml  beautify-cl.js  beautify-css.js  beautify-html.js  beautify-tests.js  beautify-tests.php  beautify.js  beautify.php  beautify.phps  bower.json  build  byindex.html  cli.js  config_2010.json  generate-changelog.sh  index.html  index.js  index.php  input_2010.js  javascriptobfuscator_unpacker.js  (+15 more)
config/: options.json  (+1 more)
python/: MANIFEST.in  css-beautify  feature_1954.py  js-beautify  js-beautify-profile  js-beautify-test  js-beautify-test.py  jsbeautifier.py  pyproject.toml  setup-css.py  setup-js.py  setup.py  test-jsbeautifier.py  test-perf-cssbeautifier.py  test-perf-jsbeautifier.py  testcommand.py
python/cssbeautifier/: __init__.py  __version__.py  _main.py
python/cssbeautifier/css/: beautifier.py  options.py
python/cssbeautifier/tests/: test.py
python/debian/: .gitignore  changelog  control  rules
python/jsbeautifier/: __init__.py  __version__.py
python/jsbeautifier/cli/: __init__.py
python/jsbeautifier/core/: acorn.py  directives.py  inputscanner.py  options.py  output.py  pattern.py  templatablepattern.py  token.py  tokenizer.py  tokenstream.py  whitespacepattern.py
python/jsbeautifier/javascript/: acorn.py  beautifier.py  options.py  tokenizer.py
(+192 files in other folders)
